--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="almond-style" id="big-almond">
   <h2 id="location-tag">Big Almond ----></h2>
-  <img id="biggest-almond" src = "./assets/images/big_almond.jpeg" alt="big almond">
+  <img class= "floating" id="biggest-almond" src = "./assets/images/big_almond.jpeg" alt="big almond">
 </div>
 </body>
 
